Bug 914891 - Bail gracefully on sticky positioning with no scroll container. r=dholbert